--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://marella.me/material-icons/iconfont/material-icons.css?v=6b65ab720b669c05b71a44827ac11a1533f2acf9" rel="stylesheet">
     <title>Vite App</title>
